--- a/App/prog-02-represent-ndanait/mobile/src/main/res/layout/congressionalcandidates.xml
+++ b/App/prog-02-represent-ndanait/mobile/src/main/res/layout/congressionalcandidates.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
-
+<ScrollView
+    android:layout_width="400dp"
+    android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,7 +29,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
-            android:background="#ffffff" >
+            android:background="@drawable/border_ui">
         </ListView>
 
         <ImageView
@@ -43,7 +45,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dip"
-            android:background="#ffffff" >
+            android:background="@drawable/border_ui" >
         </ListView>
     </LinearLayout>
+    </ScrollView>
 </RelativeLayout>
