--- a/App/prog-02-represent-ndanait/mobile/src/main/res/layout/mylist.xml
+++ b/App/prog-02-represent-ndanait/mobile/src/main/res/layout/mylist.xml
@@ -4,39 +4,41 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <ImageView
-        android:id="@+id/candidatePicture"
-        android:layout_width="125dp"
-        android:layout_height="125dp"
-        android:padding="5dp" />
-
-    <LinearLayout android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout android:layout_width="match_parent"
+        android:layout_height="304dp"
         android:orientation="vertical">
-
         <TextView
             android:id="@+id/candidateName"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
             android:text="Medium Text"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
+            android:gravity="center"
             android:padding="2dp"
             android:fontFamily="sans-serif"/>
-        <TextView
-            android:id="@+id/candidateDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView"
-            android:layout_marginLeft="10dp"/>
-    </LinearLayout>
 
-    <ImageView
-        android:id="@+id/nextArrow"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="92dp"
-        android:layout_marginTop="35dp"
+        <ImageView
+        android:id="@+id/candidatePicture"
+        android:layout_width="120dp"
+        android:layout_height="125dp"
+        android:layout_gravity="center_horizontal"
         android:padding="5dp" />
+
+        <TextView
+            android:id="@+id/candidateDescription1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="TextView"
+            android:layout_marginLeft="5dp"/>
+
+        <TextView
+            android:id="@+id/candidateDescription2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="TextView"
+            android:layout_marginLeft="5dp"/>
+    </LinearLayout>
 </LinearLayout>
