--- a/App/prog-02-represent-ndanait/wear/src/main/res/layout/watchfirstcandidate.xml
+++ b/App/prog-02-represent-ndanait/wear/src/main/res/layout/watchfirstcandidate.xml
@@ -11,7 +11,7 @@
         android:id="@+id/candidateInfo"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:text="John Doe Democrat"
+        android:textSize="20dp"
         android:textColor="#5d5d5d"
         android:gravity="center"
         app:layout_box="all"
